_2009_06_19__08_37_56_ Chi-Hsiu Liang

  * Fixed a compilation bug Josh Allen reported on line 109 of IrreversibleExchangeReaction.h.

_2009_06_15__15_45_40_ Chi-Hsiu Liang

  * Fixed a Cygwin compile problem on NaN and _isnan.

2009-June-15 Chris Morley

	* Windows VC9/distribution/ReadMe.txt: same change of details
	
2009-June-15 Struan Robertson

	* README: Change of details.

_2009_06_12__14_24_18_ Chi-Hsiu Liang

  * Make manual pdf

2009-June-12 Chris Morley

  * Removed change tracking in manual
  * Moved License.txt from VC9 to top level folder
  * README added reference to Licence.txt, corrected my email address
  * MesmerQA/QA.bat Added another conditional statement so that it
    will find Mesmer.exe in the installed version (in the top level folder)
  * Windows VC9/distribution/NSISScriptToCreateInstaller.nsi: mods appropriate
    for the above.
  * Documentation/Proposal.doc: delete

_2009_06_11__16_44_59_ Chi-Hsiu Liang

  * fixed counter error in m_SpeciesSequence
  * fixed irreversibleUnimolecularReaction sink term species profile with reservoir state in the isomer.

_2009_06_11__09_16_34_ Chi-Hsiu Liang _2009_06_11__09_16_40_

  * Fixed IrreversibleExchangeReaction

2009-June-9 Struan Robertson

	* MESMER manual.doc: More tidying up.

2009-June-7 Struan Robertson

	* MESMER manual.doc: Addition of contracted basis set material.
	* HSO2_test.xml: Update test to use QM rotor.

_2009_06_02__11_11_27_ Chi-Hsiu Liang

  * Replaced isUnimolecular() and isIrreversible() check functions by getReactionType().

_2009_06_02__09_26_48_ Chi-Hsiu Liang

  * Enabled tunneling into unimolecular sink term.

_2009_06_01__10_58_13_ Chi-Hsiu Liang

  * Update manual
  * Add hydrogen atoms in the atom arrays of pentyl system. This is for checking the number of vibrational frequencies.
    In the meantime, if the user did not define the atomarray, this check is not performed.

2009-May-30 Struan Robertson

	* MESMER manual.doc: Correction to ILT formula.